@@ -1,3 +1,10 @@
+Changes after KWord-1.3-beta2
+=============================
+- Right-click on a selected frame shouldn't unselect it
+- Esc to deselect all frames
+- Fixed line-height bug due to hyphenation
+- Make the text view mode work again
+
 Changes after KWord-1.3-beta1
 =============================
 
